# qastrocam-g2

./: .travis.yml  CMakeLists.txt  Makefile  ProjectHome.md  configure.in
CVSROOT/: loginfo
branches/qastrocam-g2_4_9-branche/: Makefile  Makefile.common
cmake/Modules/: FindLibAV.cmake
debian/: README.Debian  rules
doc/: BUGS  ChangeLog  INSTALL  README.philips  TODO  dev-notes  qastrocam-g2-help.html
lib/: huffyuv_readme.txt
qastrocam-g2/: Makefile  Makefile.arch  Makefile.common  Makefile.vars.in  configure.in
qastrocam-g2/debian/: changelog  control  qastrocam-g2.docs  rules
qastrocam-g2/doc/: ChangeLog  Contributors  Readme  TODO  qastrocam-doc.html  qastrocam-it.ts  qastrocam-template.html
qastrocam-g2/qastrocam/: Makefile  main.cpp  qastrocamVersion.hpp
qastrocam-g2/qastrolib/: CamHistogram.cpp  CamHistogram.hpp  FitsImage.cpp  FitsImage.hpp  FrameAlgo.hpp  FrameBayer.cpp  FrameBayer.hpp  FrameBias.cpp  FrameDark.cpp  FrameDark.hpp  FrameFlat.cpp  FrameFlat.hpp  FrameId.cpp  FrameId.hpp  FrameMirror.cpp  FrameMirror.hpp  Makefile  PPort.cpp  PPort.hpp  QBlink.cpp  QCam.cpp  QCam.hpp  QCamAdd.cpp  QCamAdd.hpp  QCamAutoAlign.cpp  QCamAutoGuidage.cpp  QCamAutoGuidage.hpp  QCamAutoGuidageSimple.cpp  QCamAutoGuidageSimple.hpp  QCamClient.cpp  QCamComboBox.cpp  QCamDC60.cpp  (+97 more)
qastrolib/: FrameAlgo.hpp  FrameDark.hpp  Makefile  QCamAutoGuidageSimple.hpp  QCamClient.cpp  QCamComboBox.cpp  QCamDC60.cpp  QCamFindShift_hotSpot.hpp  QCamMovieSer.hpp  QCamStack.cpp  QCamV4L2.cpp  QCamVesta.cpp  QCamVestaK2.cpp  QCamVestaK2.hpp  QKingClient.cpp  QStreamTranslator.cpp  QTelescopeQHY6.hpp  qastrolibVersion.hpp
src/: CamHistogram.cpp  CamHistogram.hpp  Doxyfile.in  FitsImage.hpp  FrameAlgo.hpp  FrameBayer.cpp  FrameBias.cpp  FrameBias.hpp  FrameDark.cpp  FrameDark.hpp  FrameFlat.cpp  FrameFlat.hpp  FrameId.hpp  FrameMirror.cpp  FrameMirror.hpp  QCam.cpp  QCam.hpp  QCamAdd.cpp  QCamAdd.hpp  QCamAutoAlign.cpp  QCamAutoAlign.hpp  QCamAutoGuidage.cpp  QCamAutoGuidage.hpp  QCamAutoGuidageSimple.cpp  QCamAutoGuidageSimple.hpp  QCamClient.cpp  QCamClient.hpp  QCamComboBox.cpp  QCamComboBox.hpp  QCamDC60.cpp  QCamDC60.hpp  QCamDisplay.cpp  QCamDisplay.hpp  QCamDisplayImplSDL.cpp  QCamDisplayImplSDL.hpp  QCamFindShift.cpp  QCamFindShift_hotSpot.cpp  QCamFindShift_hotSpot.hpp  QCamFocus.cpp  QCamFrame.cpp  (+95 more)
tags/qastrocam-g2_4_2/qastrocam-g2/: configure.in
tags/qastrocam-g2_4_2/qastrocam-g2/doc/: TODO
tags/qastrocam-g2_4_2/qastrocam-g2/qastrocam/: qastrocamVersion.hpp
tags/qastrocam-g2_4_2/qastrocam-g2/qastrolib/: FrameMirror.cpp  Makefile  QCamAdd.cpp  QCamDisplay.cpp  QCamDisplayImplSDL.cpp  QCamFindShift.cpp  QCamFindShift.hpp  QCamFrame.hpp  QCamMovie.cpp  QCamMovieAvi.hpp  QCamOV511.cpp  QCamOV511.hpp  QCamSlider.hpp  QCamUtilities.cpp  QGridBox.hpp  QKingClient.cpp  QTelescopeMCU.cpp  SCmod.hpp  SCmodParPort.hpp  rasterOp.cpp
tags/qastrocam-g2_4_6/qastrocam-g2/: Makefile  configure.in  qastrocam-g2.desktop
tags/qastrocam-g2_4_6/qastrocam-g2/debian/: changelog
tags/qastrocam-g2_4_6/qastrocam-g2/doc/: ChangeLog
tags/qastrocam-g2_4_6/qastrocam-g2/qastrocam/: qastrocamVersion.hpp
tags/qastrocam-g2_4_6/qastrocam-g2/qastrolib/: Makefile  QBlink.hpp  QCam.hpp  QCamClient.cpp  QCamComboBox.cpp  QCamFrame.hpp  QCamOV511.hpp  QDirectoryChooser.hpp  SCmod.hpp  bayer.cpp  bayer.hpp
trunk/: CMakeLists.txt  CTestConfig.cmake
trunk/CVSROOT/: loginfo
trunk/cmake/Modules/: FindAVIFile.cmake  FindCFITSIO.cmake
trunk/debian/: control  copyright
trunk/doc/: BUGS  ChangeLog  Contributors  INSTALL  README.philips  README.qhy  TODO  dev-notes  qastrocam-g2-help.html
trunk/doc/history/: remarques-3.9.1-current.txt
trunk/doc/sources/: manual-fr.tex
trunk/qastrocam/: main.cpp  qastrocamVersion.hpp
trunk/qastrocam-g2/: Makefile  Makefile.arch  Makefile.common  Makefile.vars.in  configure.in  makePakage.sh
trunk/qastrocam-g2/debian/: changelog  control  copyright  qastrocam-g2.desktop
trunk/qastrocam-g2/doc/: ChangeLog  Contributors  README  TODO  dev-notes  qastrocam-features-en.txt  qastrocam-features.txt  qastrocam-tutorial-en.txt  qastrocam.css
trunk/qastrocam-g2/doc/sources/: manual-fr.tex
trunk/qastrocam-g2/qastrocam/: Makefile  main.cpp  qastrocamVersion.hpp
trunk/qastrocam-g2/qastrolib/: CamHistogram.hpp  Doxyfile  FitsImage.cpp  FrameAlgo.hpp  FrameBayer.cpp  FrameBayer.hpp  FrameBias.cpp  FrameBias.hpp  FrameDark.cpp  FrameDark.hpp  FrameFlat.hpp  FrameId.cpp  FrameMirror.cpp  FrameMirror.hpp  Makefile  PPort.cpp  PPort.hpp  QCam.cpp  QCam.hpp  QCamAdd.cpp  QCamAdd.hpp  QCamAutoAlign.cpp  QCamAutoGuidage.cpp  QCamAutoGuidage.hpp  QCamAutoGuidageSimple.cpp  QCamAutoGuidageSimple.hpp  QCamClient.cpp  QCamComboBox.hpp  QCamDC60.cpp  QCamDC60.hpp  QCamDisplay.cpp  QCamDisplay.hpp  QCamDisplayImplSDL.cpp  QCamDisplayImplSDL.hpp  QCamFindShift.cpp  QCamFindShift_barycentre.cpp  QCamFindShift_barycentre.hpp  QCamFindShift_hotSpot.cpp  QCamFocus.cpp  QCamFocus.hpp  (+83 more)
trunk/qastrolib/: FitsImage.cpp  FrameAlgo.cpp  QCamAdd.hpp  QCamDC60.hpp  QCamDisplay.cpp  QCamFocus.cpp  QCamMovieAvi.cpp  QCamSelection.hpp  QCamV4L.cpp  QCamV4L2fi.hpp  QCamVestaK3.cpp  QSetting.cpp  QTelescope.hpp  QTelescopeAPM.hpp  QTelescopeAutostar.cpp  QTelescopeMCU.hpp  QTelescopeMTS.hpp  QTelescopeQHY5.hpp  QVectorMap.cpp  SCmodParPortPPdev.cpp  dc60_private_ioctls.h
trunk/qhy_driver/: 86-qhyccd.rules  qhyccd.rules
trunk/src/: CamHistogram.cpp  CamHistogram.hpp  Doxyfile.in  FitsImage.cpp  FitsImage.hpp  FrameAlgo.cpp  FrameAlgo.hpp  FrameBayer.cpp  FrameBayer.hpp  FrameBias.cpp  FrameBias.hpp  FrameDark.cpp  FrameDark.hpp  FrameFlat.cpp  FrameFlat.hpp  FrameId.cpp  FrameId.hpp  FrameMirror.cpp  FrameMirror.hpp  QCam.cpp  QCam.hpp  QCamAdd.cpp  QCamAdd.hpp  QCamAutoAlign.cpp  QCamAutoAlign.hpp  QCamAutoGuidage.cpp  QCamAutoGuidage.hpp  QCamAutoGuidageSimple.cpp  QCamAutoGuidageSimple.hpp  QCamClient.cpp  QCamClient.hpp  QCamComboBox.cpp  QCamComboBox.hpp  QCamDC60.cpp  QCamDC60.hpp  QCamDisplay.cpp  QCamDisplay.hpp  QCamDisplayImplSDL.cpp  QCamDisplayImplSDL.hpp  QCamFindShift.cpp  (+109 more)
(+339 files in other folders)
